# progettoFinalePCS

./: CMakeLists.txt  main.cpp
Documentation/: SequenceUml  uml_Class.txt  uml_Tests.txt  uml_sequence.txt
Polygons/Cubo/: Cells1D.csv  Cells3D.csv
Polygons/Tetraedro/: Cell1Ds.csv
Polygons/p3q3/: Cells0D.csv  Cells2D.csv
Polygons/p4q3/: Cells0D.csv  Cells2D.csv  Cells3D.csv
Polygons/p5q3/: Cell0Ds.csv  Cell3Ds.csv  Cells0D.csv  Cells1D.csv  Cells2D.csv
src/: CMakeLists.txt  Dijkstra.hpp  Polygon.hpp  T2.cpp  Utils.cpp  Utils.hpp  dijkstra.cpp  dual.cpp  tappezzaturaT1.cpp
src_test/: CMakeLists.txt  TestPolygon.hpp
